<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranja"
    tools:context="com.example.jesus95.truequedegarage.InicioSesion.NewUserPaso1">


    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_welcome"
        android:textColor="@color/white"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_guardar_cel"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_movil_paso1"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_guardar_fijo"
        android:textColor="@color/white"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/edt_fijo_paso1"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btn_continuar_paso1"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20dp"
        android:text="@string/txt_boton_numeros"/>


</LinearLayout>
